# LangChain-Basics

./: 1_RAG_Getting_Started.ipynb  1_rag_getting_started.py  Langchain_Basics.ipynb  Langchain_tools.ipynb  README.md  ai_chat_app.py  pyproject.toml  requirements.txt
